--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -25,8 +25,7 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.swing-app-framework.classpath}:\
-    ${libs.JCharts-0.7.5.classpath}:\
-    ${libs.JCharts.classpath}
+    ${libs.JCharts-0.7.5.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
