windows settings state saved and loaded at run time.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -20,12 +20,13 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/SIMS2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.swing-app-framework.classpath}:\
-    ${libs.JCharts-0.7.5.classpath}
+    ${libs.lib.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -47,6 +48,12 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=local
+jnlp.codebase.url=file:/home/student.labs/2/20378332/linux/uni/pc/GroupJ-SIMS-936d36f/dist/
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.offline-allowed=false
+jnlp.signed=false
 main.class=sims2.SIMS2App
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
