graph error bars changed

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,7 +26,9 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.swing-app-framework.classpath}:\
-    ${libs.lib.classpath}
+    ${libs.lib.classpath}:\
+    ${libs.JCharts-0.7.5.classpath}:\
+    ${libs.jcharts.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
