--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -69,7 +69,4 @@ run.classpath=\
 run.jvmargs=
 run.test.classpath=\
     ${javac.test.classpath}:\
-    ${build.test.classes.dir}
-source.encoding=UTF-8
-src.dir=src
-test.src.dir=test
+    ${build.test
