--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,3 +5,4 @@ do.jar=true
 javac.debug=true
 javadoc.preview=true
 user.properties.file=/home/ragil/.netbeans/6.8/build.properties
+work.dir=/home/ragil/Desktop/UNI/Y3_SEM2/Prof Comp/GroupJ-SIMS-5b6a9f9
