--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,8 +26,6 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.swing-app-framework.classpath}:\
-    ${libs.lib.classpath}:\
-    ${libs.JCharts-0.7.5.classpath}:\
     ${libs.jcharts.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -69,4 +67,7 @@ run.classpath=\
 run.jvmargs=
 run.test.classpath=\
     ${javac.test.classpath}:\
-    ${build.test
+    ${build.test.classes.dir}
+source.encoding=UTF-8
+src.dir=src
+test.src.dir=test
